--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -1535,7 +1535,7 @@
         "id": "bwoJKCWp__xf"
       },
       "source": [
-        "#### Importing the libraries "
+        "#### Importing most of the libraries "
       ]
     },
     {
@@ -5251,7 +5251,7 @@
       "cell_type": "markdown",
       "source": [
         "## **Conclusions**:\n",
-        "- Our model seems to **generalize well** because the **accuracy on the test set** is **very similar** to the **accuracy on the validation set** (even higher: **97.85 > 96.85%**).\n",
+        "- Our model seems to **generalize well** because the **accuracy on the test set** is **similar** to the **accuracy on the validation set** (even higher: **97.85 > 96.85%**).\n",
         "- When **comparing** the **1st** and **2nd epochs**, **validation loss decreases** which **indicates** that **we aren't over-fitting on the training data**.\n",
         "- The model achieves a **high F1 Score**: **≈ 97.83%**.\n",
         "- It is possible that **if we didn't remove the stopwords** we would **achieve a slight increase in F1 Score**. However, as we previously explained, **we chose not to include the stopwords** (with the exception of 'not' and 'no') **due to the reason mentioned above**. We **can't have the best of both worlds!**\n"
