--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -2908,7 +2908,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final = df_merged.drop_duplicates()"
+        "df_final = df_merged.drop_duplicates(inplace=True)"
       ],
       "metadata": {
         "id": "trGlymgUP5-d"
