--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -930,7 +930,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final = df_merged.drop_duplicates()"
+    "df_final = df_merged.drop_duplicates(inplace='True')"
    ]
   },
   {
