--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -1354,7 +1354,7 @@
     }
    ],
    "source": [
-    "train = pd.concat([X_train, y_train], axis=1) # Explicar que é para juntar para serem 2 colunas a serem treinadas\n",
+    "train = pd.concat([X_train, y_train], axis=1)\n",
     "train = train.reset_index(drop=True)\n",
     "test = pd.concat([X_test, y_test], axis=1)\n",
     "test = test.reset_index(drop=True)\n",
