--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -13,7 +13,7 @@
    "id": "4043075c-2d34-40b6-a03f-e53aff311134",
    "metadata": {},
    "source": [
-    "## **Frequency-based** and **word embeddings** techniques"
+    "## **Frequency-based** and **prediction-based word embeddings** techniques"
    ]
   },
   {
