--- a/glove.ipynb
+++ b/glove.ipynb
@@ -13,7 +13,7 @@
    "id": "3253ef45-46d6-4e25-9068-65cf80785b2f",
    "metadata": {},
    "source": [
-    "###  An example of word-level **pretrained word embeddings**: **Glove**"
+    "###  An example of a **pretrained word embeddings**: **Glove**"
    ]
   },
   {
