--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -939,7 +939,7 @@
    "id": "8788a7e6-96f9-4be4-9dd6-5b165de42372",
    "metadata": {},
    "source": [
-    "#### **Although our dataset is not very large**, we will use **Word2Vec without using pretrained word embeddings** because we think we **have enough data to go for a custom vectorization** as it **will be very specific to the context the corpus has**. 
+    "#### **Although our dataset is not very large**, we will use **Word2Vec without using pretrained word embeddings** because we think we **have enough data to go for a custom vectorization** as it **will be very specific to the context the corpus has**." 
   },
   {
    "cell_type": "markdown",
