--- a/glove.ipynb
+++ b/glove.ipynb
@@ -751,8 +751,7 @@
     "#### - **All F1 scores** have **high values (above 89.0%)**.\n",
     "#### - **All tuned** models have **higher values** (some only slightly higher) for **F1 score** than the **corresponding baseline** models, as **expected**.\n",
     "#### - **Comparing** the used metrics regarding pre-trained Glove's word embeddings based on **wikipedia** and on **twitter** datasets, in **this context**, **there aren't noticeable differences**.\n",
-    "#### - The **best F1 scores** were obtained using the **SVM** classifier with **hyperparameter tuning** (slightly above 95%). \n",
-    "#### - In this **context**, as we expected, **Word2Vec** trained **without using pretrained word embeddings** proved to **achieve better results** than the **two Glove's** word-level **pre-trained word embeddings** used in **all possible comparisons**: baseline models for each of the two classifiers and tuned models for each of the classifiers."
+    "#### - The **best F1 scores** were obtained using the **SVM** classifier with **hyperparameter tuning** (slightly above 95%)."
    ]
   }
  ],
