--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -947,7 +947,7 @@
    "id": "34623588-1f57-4148-9dd7-8925133f9e0c",
    "metadata": {},
    "source": [
-    "#### Word2Vec model with default parameters except for the number of features (500) given the **vast** corpus"
+    "#### Word2Vec model with default parameters except for the number of features (500)"
    ]
   },
   {
