--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -254,7 +254,7 @@
    "id": "297e9eda-f0f7-4cc3-adfc-a9d2d599004c",
    "metadata": {},
    "source": [
-    "###  **Bag-of-Words**: establishing a benchmark with baseline classifier models"
+    "###  **Bag-of-Words**. Establishing benchmarks: logistic regression and svm classifier models with default parameters"
    ]
   },
   {
@@ -587,7 +587,7 @@
    "id": "cf457371-547f-4bb1-a24c-78105d4cb9b9",
    "metadata": {},
    "source": [
-    "###  TF-IDF: establishing a benchmark with baseline classifier models"
+    "###  TF-IDF. Establishing benchmarks: logistic regression and svm classifier models with default parameters"
    ]
   },
   {
@@ -1032,7 +1032,7 @@
    "id": "a1ba7538-84ac-4502-a576-462a67c6bb14",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** baseline model"
+    "#### **Evaluation** using **Logistic Regression** with the **default hyperparameters**"
    ]
   },
   {
@@ -1092,7 +1092,7 @@
    "id": "6e1e72fe-a58e-4e95-ba43-ca1d668e18e3",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** baseline model"
+    "#### **Evaluation** using **SVM** with the **default hyperparameters**"
    ]
   },
   {
@@ -1551,7 +1551,7 @@
    "id": "728117dd-b3a3-4967-8244-21af8c6cc879",
    "metadata": {},
    "source": [
-    "#### Using **Logistic Regression** classifier: baseline model"
+    "#### Using **Logistic Regression** classifier with the the **default hyperparameters**"
    ]
   },
   {
@@ -1611,7 +1611,7 @@
    "id": "243bcfb3-78fa-4506-bca8-4ba7447f562c",
    "metadata": {},
    "source": [
-    "#### Using **SVM** classifier: baseline model"
+    "#### Using **SVM** classifier with the the **default hyperparameters**"
    ]
   },
   {
