--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -262,7 +262,7 @@
    "id": "55d3d83c-1721-4396-b80e-2c8249472d00",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** with the **logistic regression classifier**"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** with the **Logistic Regression** classifier"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "id": "ad9036c9-19ac-43c4-b1d6-75f0a2759cf3",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM**"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** classifier"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "id": "e5de6930-a4c3-4cca-b442-e17415115410",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** classifier with **Hyperparameter tuning** "
+    "#### **Evaluation** using **Logistic Regression** classifier with **hyperparameter tuning** "
    ]
   },
   {
@@ -502,7 +502,7 @@
    "id": "a80b4781-7bfa-43cd-a2bc-95d5c3de71a4",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** classifier with **Hyperparameter tuning** "
+    "#### **Evaluation** using **SVM** classifier with **hyperparameter tuning** "
    ]
   },
   {
@@ -587,7 +587,7 @@
    "id": "cf457371-547f-4bb1-a24c-78105d4cb9b9",
    "metadata": {},
    "source": [
-    "###  TF-IDF. Establishing benchmarks: logistic regression and svm classifier models with default parameters"
+    "###  TF-IDF. Establishing benchmarks: Logistic Regression and SVM classifier models with **default parameters**"
    ]
   },
   {
@@ -595,7 +595,7 @@
    "id": "2b1b0266-52d1-4bf4-9fe6-4a4dff089922",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for the **logistic regression**"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for the **Logistic Regression**"
    ]
   },
   {
@@ -673,7 +673,7 @@
    "id": "c0877af7-a252-4f4c-ba79-5aca80813c83",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM**"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** classifier"
    ]
   },
   {
@@ -750,7 +750,7 @@
    "id": "d42a75cf-56a0-4200-8141-ffe458aa8664",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** classifier with **Hyperparameter tuning** "
+    "#### **Evaluation** using **Logistic Regression** classifier with **hyperparameter tuning** "
    ]
   },
   {
@@ -835,7 +835,7 @@
    "id": "86f543a5-30eb-4a69-a7e4-b65d7a9feb6e",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** classifier with **Hyperparameter tuning** "
+    "#### **Evaluation** using **SVM** classifier with **hyperparameter tuning** "
    ]
   },
   {
@@ -947,7 +947,7 @@
    "id": "34623588-1f57-4148-9dd7-8925133f9e0c",
    "metadata": {},
    "source": [
-    "#### Word2Vec model with default parameters except for the number of features (500)"
+    "#### Word2Vec model with **default parameters** except for the number of features (500)"
    ]
   },
   {
@@ -1024,7 +1024,7 @@
    "id": "35b7eed6-e547-4bbe-9d6f-ab1fc0933f2d",
    "metadata": {},
    "source": [
-    "#### **Word2Vec**: establishing a benchmark with baseline classifier models"
+    "#### Establishing **benchmarks** with **classifiers** with the **default hyperparameters**"
    ]
   },
   {
@@ -1152,7 +1152,7 @@
    "id": "d9d9da7d-80fe-40b5-b28e-140e0f4c7e0c",
    "metadata": {},
    "source": [
-    "#### **Hyperparemeter tunning** for **Logistic Regression** Classifier"
+    "#### **Hyperparameter tuning** for **Logistic Regression** classifier"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "id": "9fdebd55-488c-45af-a59c-bda8043d424b",
    "metadata": {},
    "source": [
-    "#### **Hyperparemeter tunning** for **SVM** Classifier"
+    "#### **Hyperparameter tuning** for **SVM** classifier"
    ]
   },
   {
@@ -1265,7 +1265,7 @@
     }
    ],
    "source": [
-    "# Hyperparameter tuning com SVM \n",
+    "# Hyperparameter tuning with SVM \n",
     "\n",
     "grid_svm_word2vec = [\n",
     "    {'kernel':('linear', 'rbf')},\n",
@@ -1490,7 +1490,7 @@
    "id": "4c19cf8d-f28c-452e-ac34-85b1f8869bd2",
    "metadata": {},
    "source": [
-    "#### Doc2Vec Model using **negative smapling** with default parameters except for the number of features (500) given the **vast corpus** "
+    "#### Doc2Vec model using **negative smapling** with **default hyperparameters** except for the number of features (500) given the **vast corpus** "
    ]
   },
   {
@@ -1519,7 +1519,7 @@
    "id": "1ef9ba1c-a94f-408d-8ac4-ae53f24a9011",
    "metadata": {},
    "source": [
-    "#### Building the **Final Vector Feature** for the Classifier\n"
+    "#### Building the **Final Vector Feature** for the classifiers\n"
    ]
   },
   {
@@ -1551,7 +1551,7 @@
    "id": "728117dd-b3a3-4967-8244-21af8c6cc879",
    "metadata": {},
    "source": [
-    "#### Using **Logistic Regression** classifier with the the **default hyperparameters**"
+    "#### Using the **Logistic Regression** classifier with the the **default hyperparameters**"
    ]
   },
   {
@@ -1611,7 +1611,7 @@
    "id": "243bcfb3-78fa-4506-bca8-4ba7447f562c",
    "metadata": {},
    "source": [
-    "#### Using **SVM** classifier with the the **default hyperparameters**"
+    "#### Using the **SVM** classifier with the the **default hyperparameters**"
    ]
   },
   {
@@ -1671,7 +1671,7 @@
    "id": "c3f507a7-2aff-47a8-897f-a97142719de1",
    "metadata": {},
    "source": [
-    "#### **Hyperparemeter tunning** for **Logistic Regression** Classifier "
+    "#### **Hyperparemeter tuning** for the **Logistic Regression** classifier "
    ]
   },
   {
@@ -1752,7 +1752,7 @@
    "id": "1970cb7e-ec5a-4adc-bf01-03a0b3057fc7",
    "metadata": {},
    "source": [
-    "#### **Hyperparemeter tunning** for **SVM** Classifier "
+    "#### **Hyperparameter tuning** for the **SVM** classifier "
    ]
   },
   {
@@ -1835,8 +1835,8 @@
    "source": [
     "#### **Conclusions**: \n",
     "#### - For **all** models, **F1 scores** have **high values** (> 90%).\n",
-    "#### - **All tuned** models have **higher values** for **F1 score** than the **corresponding baseline** models, as **expected** (with the exception of Logistic Regression with CountVectorizer, we got the same value for the baseline model and for the tuned model) .\n",
-    "#### - The **best F1 scores** (for both labels) were achieved using **TF-IDF** and the **SVM** classifier with **hyperparameter tuning** (just above 98%). "
+    "#### - **All tuned** models have **higher values** for **F1 score** than the **corresponding non-tuned** models, as **expected** (with the exception of Logistic Regression with CountVectorizer, we got the same score for the non-tuned model and for the tuned model) .\n",
+    "#### - The **best F1 scores** (for both labels) were achieved using **TF-IDF** with the **SVM** classifier with **hyperparameter tuning** (just above 98%). "
    ]
   }
  ],
