--- a/glove.ipynb
+++ b/glove.ipynb
@@ -5,7 +5,7 @@
    "id": "77013426-68e6-4585-9c35-a06128fcb0c2",
    "metadata": {},
    "source": [
-    "## **Sentiment Analysis** of the **Restaurant Reviews** from **YELP** Dataset"
+    "## **Sentiment Analysis** of the **Restaurant Reviews** from **YELP** dataset"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "id": "b86668fb-0828-405a-bd1e-52cb7d2d652f",
    "metadata": {},
    "source": [
-    "#### Read the dataset from the bucket"
+    "#### Read the dataset from the **bucket**"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "id": "b5a3f73b-b810-4f1c-9c7a-0809a4f251e4",
    "metadata": {},
    "source": [
-    "### **glove-twitter-200**: Pre-trained glove vectors based on 2B tweets, 27B tokens, 1.2M vocab, uncased"
+    "### **glove-twitter-200**: pre-trained **glove vectors** based on 2B tweets, 27B tokens, 1.2M vocab, **uncased**"
    ]
   },
   {
@@ -167,7 +167,7 @@
    "id": "753a7793-e10e-4d01-973b-832eaa98eb2e",
    "metadata": {},
    "source": [
-    "#### Using **Logistic Regression** baseline model"
+    "#### Using **Logistic Regression** model with the **default hyperparameters**"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "id": "06a3dc6e-55a1-42db-a46b-1ede0d1a599a",
    "metadata": {},
    "source": [
-    "#### Using **SVM** baseline model"
+    "#### Using **SVM** model with the **default hyperparameters**"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "id": "9181f0a1-050d-4811-a09d-e69c0a7f5c40",
    "metadata": {},
    "source": [
-    "#### Using **Logistic Regression** classifier with **Hyperparameter tuning** (1,000 iterations to achieve convergence)"
+    "#### Using **Logistic Regression** classifier with **hyperparameter tuning** (1,000 iterations to achieve convergence)"
    ]
   },
   {
@@ -369,7 +369,7 @@
    "id": "96b30608-f509-4c9e-814a-cfd2f8f5aa55",
    "metadata": {},
    "source": [
-    "#### Using **SVM** classifier with **Hyperparameter tuning**"
+    "#### Using **SVM** classifier with **hyperparameter tuning**"
    ]
   },
   {
@@ -479,7 +479,7 @@
    "id": "cdfc5007-40ff-40f5-8074-acc13d1a5f62",
    "metadata": {},
    "source": [
-    "#### Using **Logistic Regression** baseline model"
+    "#### Using **Logistic Regression** model with the **default hyperparameters**"
    ]
   },
   {
@@ -539,7 +539,7 @@
    "id": "53492a87-a2c5-455d-8d2b-ffcd1733ed92",
    "metadata": {},
    "source": [
-    "#### Using **SVM** baseline model"
+    "#### Using **SVM** model with the **default hyperparameters**"
    ]
   },
   {
@@ -623,7 +623,7 @@
     }
    ],
    "source": [
-    "# Hyperparemeter tunning for Logistic Regression Classifier\n",
+    "# Hyperparemeter tuning for Logistic Regression classifier\n",
     "grid_lr_wiki = {\"C\":[1, 2, 3, 4], 'l1_ratio':['none', 0, 0.1], 'penalty':['l2', 'elasticnet'],\n",
     "       'solver':['lbfgs', 'saga']}\n",
     "\n",
@@ -695,7 +695,7 @@
     }
    ],
    "source": [
-    "# Hyperparameter tuning com SVM \n",
+    "# Hyperparameter tuning for SVM classifier\n",
     "\n",
     "grid_svm = [\n",
     "    {'kernel':('linear', 'rbf')},\n",
@@ -749,7 +749,7 @@
    "source": [
     "### **Conclusions**: \n",
     "#### - **All F1 scores** have **high values (above 89.0%)**.\n",
-    "#### - **All tuned** models have **higher values** (some only slightly higher) for **F1 score** than the **corresponding baseline** models, as **expected**.\n",
+    "#### - **All tuned** models have **higher values** (some only slightly higher) for **F1 score** than the **corresponding non-tuned** models, as **expected**.\n",
     "#### - **Comparing** the used metrics regarding pre-trained Glove's word embeddings based on **wikipedia** and on **twitter** datasets, in **this context**, **there aren't noticeable differences**.\n",
     "#### - The **best F1 scores** were obtained using the **SVM** classifier with **hyperparameter tuning** (slightly above 95%)."
    ]
