--- a/glove.ipynb
+++ b/glove.ipynb
@@ -288,7 +288,7 @@
    "id": "9181f0a1-050d-4811-a09d-e69c0a7f5c40",
    "metadata": {},
    "source": [
-    "#### Using **Logistic Regression** classifier with **hyperparameter tuning** (1,000 iterations to achieve convergence)"
+    "#### Using **Logistic Regression** model with **hyperparameter tuning** (1,000 iterations to achieve convergence)"
    ]
   },
   {
@@ -369,7 +369,7 @@
    "id": "96b30608-f509-4c9e-814a-cfd2f8f5aa55",
    "metadata": {},
    "source": [
-    "#### Using **SVM** classifier with **hyperparameter tuning**"
+    "#### Using **SVM** model with **hyperparameter tuning**"
    ]
   },
   {
@@ -623,7 +623,7 @@
     }
    ],
    "source": [
-    "# Hyperparemeter tuning for Logistic Regression classifier\n",
+    "# Hyperparemeter tuning for Logistic Regression model\n",
     "grid_lr_wiki = {\"C\":[1, 2, 3, 4], 'l1_ratio':['none', 0, 0.1], 'penalty':['l2', 'elasticnet'],\n",
     "       'solver':['lbfgs', 'saga']}\n",
     "\n",
@@ -695,7 +695,7 @@
     }
    ],
    "source": [
-    "# Hyperparameter tuning for SVM classifier\n",
+    "# Hyperparameter tuning for SVM model\n",
     "\n",
     "grid_svm = [\n",
     "    {'kernel':('linear', 'rbf')},\n",
@@ -751,7 +751,7 @@
     "#### - **All F1 scores** have **high values (above 89.0%)**.\n",
     "#### - **All tuned** models have **higher values** (some only slightly higher) for **F1 score** than the **corresponding non-tuned** models, as **expected**.\n",
     "#### - **Comparing** the used metrics regarding pre-trained Glove's word embeddings based on **wikipedia** and on **twitter** datasets, in **this context**, **there aren't noticeable differences**.\n",
-    "#### - The **best F1 scores** were obtained using the **SVM** classifier with **hyperparameter tuning** (slightly above 95%)."
+    "#### - The **best F1 scores** were obtained using the **SVM** model with **hyperparameter tuning** (slightly above 95%)."
    ]
   }
  ],
