--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -254,7 +254,7 @@
    "id": "297e9eda-f0f7-4cc3-adfc-a9d2d599004c",
    "metadata": {},
    "source": [
-    "###  **Bag-of-Words**. Establishing benchmarks: logistic regression and svm classifier models with default parameters"
+    "###  **Bag-of-Words**. Establishing benchmarks: Logistic Regression and SVM models with default parameters"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "id": "55d3d83c-1721-4396-b80e-2c8249472d00",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** with the **Logistic Regression** classifier"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** with the **Logistic Regression** model"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "id": "ad9036c9-19ac-43c4-b1d6-75f0a2759cf3",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** classifier"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** model"
    ]
   },
   {
@@ -417,7 +417,7 @@
    "id": "e5de6930-a4c3-4cca-b442-e17415115410",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** classifier with **hyperparameter tuning** "
+    "#### **Evaluation** using **Logistic Regression** model with **hyperparameter tuning** "
    ]
   },
   {
@@ -502,7 +502,7 @@
    "id": "a80b4781-7bfa-43cd-a2bc-95d5c3de71a4",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** classifier with **hyperparameter tuning** "
+    "#### **Evaluation** using **SVM** model with **hyperparameter tuning** "
    ]
   },
   {
@@ -538,7 +538,7 @@
     "    {'svm__C':[1, 2, 3, 4]},\n",
     "]    \n",
     "\n",
-    "# Pipeline for CountVectorizer - with the best ngram_range - and SVM Classifier \n",
+    "# Pipeline for CountVectorizer - with the best ngram_range - and SVM model\n",
     "svm_pipe_2 = Pipeline([\n",
     " ('c_vectorizer', CountVectorizer(ngram_range = (1,2))),\n",
     " ('svm',svm.SVC(random_state=123))\n",
@@ -587,7 +587,7 @@
    "id": "cf457371-547f-4bb1-a24c-78105d4cb9b9",
    "metadata": {},
    "source": [
-    "###  TF-IDF. Establishing benchmarks: Logistic Regression and SVM classifier models with **default parameters**"
+    "###  TF-IDF. Establishing benchmarks: Logistic Regression and SVM models with **default parameters**"
    ]
   },
   {
@@ -673,7 +673,7 @@
    "id": "c0877af7-a252-4f4c-ba79-5aca80813c83",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** classifier"
+    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** model"
    ]
   },
   {
@@ -750,7 +750,7 @@
    "id": "d42a75cf-56a0-4200-8141-ffe458aa8664",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** classifier with **hyperparameter tuning** "
+    "#### **Evaluation** using **Logistic Regression** model with **hyperparameter tuning** "
    ]
   },
   {
@@ -835,7 +835,7 @@
    "id": "86f543a5-30eb-4a69-a7e4-b65d7a9feb6e",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** classifier with **hyperparameter tuning** "
+    "#### **Evaluation** using **SVM** model with **hyperparameter tuning** "
    ]
   },
   {
@@ -1024,7 +1024,7 @@
    "id": "35b7eed6-e547-4bbe-9d6f-ab1fc0933f2d",
    "metadata": {},
    "source": [
-    "#### Establishing **benchmarks** with **classifiers** with the **default hyperparameters**"
+    "#### Establishing **benchmarks** with two **classifiers** with the **default hyperparameters**"
    ]
   },
   {
@@ -1152,7 +1152,7 @@
    "id": "d9d9da7d-80fe-40b5-b28e-140e0f4c7e0c",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **Logistic Regression** classifier"
+    "#### **Hyperparameter tuning** for **Logistic Regression**"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "id": "9fdebd55-488c-45af-a59c-bda8043d424b",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **SVM** classifier"
+    "#### **Hyperparameter tuning** for **SVM**"
    ]
   },
   {
@@ -1551,7 +1551,7 @@
    "id": "728117dd-b3a3-4967-8244-21af8c6cc879",
    "metadata": {},
    "source": [
-    "#### Using the **Logistic Regression** classifier with the the **default hyperparameters**"
+    "#### Using the **Logistic Regression** model with the the **default hyperparameters**"
    ]
   },
   {
@@ -1611,7 +1611,7 @@
    "id": "243bcfb3-78fa-4506-bca8-4ba7447f562c",
    "metadata": {},
    "source": [
-    "#### Using the **SVM** classifier with the the **default hyperparameters**"
+    "#### Using the **SVM** model with the the **default hyperparameters**"
    ]
   },
   {
@@ -1671,7 +1671,7 @@
    "id": "c3f507a7-2aff-47a8-897f-a97142719de1",
    "metadata": {},
    "source": [
-    "#### **Hyperparemeter tuning** for the **Logistic Regression** classifier "
+    "#### **Hyperparemeter tuning** for **Logistic Regression**"
    ]
   },
   {
@@ -1752,7 +1752,7 @@
    "id": "1970cb7e-ec5a-4adc-bf01-03a0b3057fc7",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for the **SVM** classifier "
+    "#### **Hyperparameter tuning** for **SVM**"
    ]
   },
   {
@@ -1836,7 +1836,7 @@
     "#### **Conclusions**: \n",
     "#### - For **all** models, **F1 scores** have **high values** (> 90%).\n",
     "#### - **All tuned** models have **higher values** for **F1 score** than the **corresponding non-tuned** models, as **expected** (with the exception of Logistic Regression with CountVectorizer, we got the same score for the non-tuned model and for the tuned model) .\n",
-    "#### - The **best F1 scores** (for both labels) were achieved using **TF-IDF** with the **SVM** classifier with **hyperparameter tuning** (just above 98%). "
+    "#### - The **best F1 scores** (for both labels) were achieved using **TF-IDF** with the **SVM** model with **hyperparameter tuning** (just above 98%). "
    ]
   }
  ],
