--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -417,7 +417,7 @@
    "id": "e5de6930-a4c3-4cca-b442-e17415115410",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** model with **hyperparameter tuning** "
+    "#### **Evaluation** using **Logistic Regression** model with **hyperparameter tuning** (using **GridSearchCV**)"
    ]
   },
   {
@@ -502,7 +502,7 @@
    "id": "a80b4781-7bfa-43cd-a2bc-95d5c3de71a4",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** model with **hyperparameter tuning** "
+    "#### **Evaluation** using **SVM** model with **hyperparameter tuning** (using **GridSearchCV**)"
    ]
   },
   {
@@ -750,7 +750,7 @@
    "id": "d42a75cf-56a0-4200-8141-ffe458aa8664",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **Logistic Regression** model with **hyperparameter tuning** "
+    "#### **Evaluation** using **Logistic Regression** model with **hyperparameter tuning** (using **GridSearchCV**)"
    ]
   },
   {
@@ -835,7 +835,7 @@
    "id": "86f543a5-30eb-4a69-a7e4-b65d7a9feb6e",
    "metadata": {},
    "source": [
-    "#### **Evaluation** using **SVM** model with **hyperparameter tuning** "
+    "#### **Evaluation** using **SVM** model with **hyperparameter tuning** (using **GridSearchCV**)"
    ]
   },
   {
@@ -1152,7 +1152,7 @@
    "id": "d9d9da7d-80fe-40b5-b28e-140e0f4c7e0c",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **Logistic Regression**"
+    "#### **Hyperparameter tuning** for **Logistic Regression** (using **GridSearchCV**)**"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "id": "9fdebd55-488c-45af-a59c-bda8043d424b",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **SVM**"
+    "#### **Hyperparameter tuning** for **SVM** (using **GridSearchCV**)"
    ]
   },
   {
@@ -1611,7 +1611,7 @@
    "id": "243bcfb3-78fa-4506-bca8-4ba7447f562c",
    "metadata": {},
    "source": [
-    "#### Using the **SVM** model with the the **default hyperparameters**"
+    "#### Using **SVM** model with the the **default hyperparameters**"
    ]
   },
   {
@@ -1671,7 +1671,7 @@
    "id": "c3f507a7-2aff-47a8-897f-a97142719de1",
    "metadata": {},
    "source": [
-    "#### **Hyperparemeter tuning** for **Logistic Regression**"
+    "#### **Hyperparemeter tuning** (using **GridSearchCV**) for **Logistic Regression**"
    ]
   },
   {
@@ -1752,7 +1752,7 @@
    "id": "1970cb7e-ec5a-4adc-bf01-03a0b3057fc7",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **SVM**"
+    "#### **Hyperparameter tuning** (using **GridSearchCV**) for **SVM**"
    ]
   },
   {
