--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -262,7 +262,7 @@
    "id": "55d3d83c-1721-4396-b80e-2c8249472d00",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** with the **Logistic Regression** model"
+    "#### Let's **find out** which **ngram_range performs better** with the **Logistic Regression** model"
    ]
   },
   {
@@ -340,7 +340,7 @@
    "id": "ad9036c9-19ac-43c4-b1d6-75f0a2759cf3",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** model"
+    "#### Let's **find out** which **ngram_range performs better** for with the **SVM** model"
    ]
   },
   {
