--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -595,7 +595,7 @@
    "id": "2b1b0266-52d1-4bf4-9fe6-4a4dff089922",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for the **Logistic Regression**"
+    "#### Let's **find out** which **ngram_range performs better** for the **Logistic Regression**"
    ]
   },
   {
@@ -673,7 +673,7 @@
    "id": "c0877af7-a252-4f4c-ba79-5aca80813c83",
    "metadata": {},
    "source": [
-    "#### We can use a **pipeline** like below to **find out** which **ngram_range performs better** for with the **SVM** model"
+    "#### Let's **find out** which **ngram_range performs better** for with the **SVM** model"
    ]
   },
   {
@@ -1152,7 +1152,7 @@
    "id": "d9d9da7d-80fe-40b5-b28e-140e0f4c7e0c",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **Logistic Regression** (using **GridSearchCV**)**"
+    "#### **Logistic Regression** with **Hyperparameter tuning** (using **GridSearchCV**)"
    ]
   },
   {
@@ -1234,7 +1234,7 @@
    "id": "9fdebd55-488c-45af-a59c-bda8043d424b",
    "metadata": {},
    "source": [
-    "#### **Hyperparameter tuning** for **SVM** (using **GridSearchCV**)"
+    "#### **SVM** with **Hyperparameter tuning** (using **GridSearchCV**)"
    ]
   },
   {
