--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1531,7 +1531,7 @@
    "id": "d56965a5-91a4-44cb-a58b-0e4ee8ab6eef",
    "metadata": {},
    "source": [
-    "#### As the dataset is **imbalanced** we **upsample** the **minority class** (negative sentiment - 0)"
+    "#### To deal with **imbalanced** data we chose to **upsample** the **minority class** (negative sentiment - 0)"
    ]
   },
   {
