--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -21,7 +21,7 @@
    "id": "fa5fd429-9a7c-4cef-aa1a-c6ecf2b254f6",
    "metadata": {},
    "source": [
-    "#### Set the path to the **reviews** dataset (stored in **GCP bucket**)"
+    "#### Set the path to the **reviews** dataset (stored in a **GCP bucket**)"
    ]
   },
   {
