--- a/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
+++ b/BoW-TfIdf-Word2Vec-Doc2Vec.ipynb
@@ -78,7 +78,7 @@
    "id": "a5c01c4b-7438-4edb-b5ec-fd09d43d088c",
    "metadata": {},
    "source": [
-    "#### **Read** the **cleaned dataset stored** in the **bucket after** the **preprocesssing** phase"
+    "#### **Read** the **cleaned dataset stored** in a GCP **bucket after** the **preprocesssing** phase"
    ]
   },
   {
