--- a/glove.ipynb
+++ b/glove.ipynb
@@ -66,7 +66,7 @@
    "id": "b86668fb-0828-405a-bd1e-52cb7d2d652f",
    "metadata": {},
    "source": [
-    "#### Read the dataset from the **bucket**"
+    "#### Read the dataset from the GCP **bucket**"
    ]
   },
   {
