--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1926,7 +1926,7 @@
    "id": "301607e7-a8a1-4955-879f-ca27e3237c17",
    "metadata": {},
    "source": [
-    "#### Let's save into the bucket the dataset with **only** the columns of our interest"
+    "#### Let's **save** the **dataset** with **only** the columns of our interest to the **bucket**"
    ]
   },
   {
